// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Article Count test Render the authors article counts as expected for a UQ researcher) 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  direction="column"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    313
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    eSpace works from
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    1975
    <span>
       to 
    </span>
    2018
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`Dashboard Article Count test should have a style generator 1`] = `
Object {
  "articlesFrom": Object {
    "color": "#fff",
    "fontSize": "0.9rem",
    "fontWeight": "600",
    "lineHeight": "1rem",
    "padding": "0 16px",
    "textAlign": "center",
  },
  "dateRange": Object {
    "color": "#fff",
    "fontSize": "1.25rem",
    "fontWeight": "600",
    "lineHeight": "1.5rem",
    "padding": "0 16px",
    "textAlign": "center",
  },
  "noOfArticles": Object {
    "color": "#fff",
    "fontSize": "4.75rem",
    "fontWeight": "600",
    "lineHeight": "4.75rem",
    "padding": "0 16px",
    "textAlign": "center",
  },
}
`;

exports[`Dashboard Article Count test should not render anything if any data is missing 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  direction="column"
/>
`;
